removed unnecessary keys

--- a/config.env.sample
+++ b/config.env.sample
@@ -13,29 +13,8 @@
 
 # Private tracker API keys & Announce URLs
 # ------------------------------------------------------------ #
-ACM_API_KEY=
-ACM_ANNOUNCE_URL=https://asiancinema.me/announce/
-
-BHD_API_KEY=
-BHD_ANNOUNCE_URL=https://beyond-hd.me/announce/
-
-BLU_API_KEY=
-BLU_ANNOUNCE_URL=https://blutopia.xyz/announce/
-
-R4E_API_KEY=
-R4E_ANNOUNCE_URL=https://racing4everyone.eu/announce/
-
-ATH_API_KEY=
-ATH_ANNOUNCE_URL=https://aither.cc/announce/
-
-TELLY_API_KEY=
-TELLY_ANNOUNCE_URL=https://telly.wtf/announce/
-
-NTELOGO_API_KEY=
-NTELOGO_ANNOUNCE_URL= https://ntelogo.org/announce/
-
-UFHD_API_KEY=
-UFHD_ANNOUNCE_URL=https://uncutflixhd.com/announce/
+DBY_API_KEY=
+DBY_ANNOUNCE_URL=https://asiancinema.me/announce/
 
 
 # TMDB API key (Required)
